bugfix: overflowing slider cretes scrollbar on games/[game] page. Reduced the scale ratio, no longr overflowing

--- a/src/app/components/styles/gamescrollerstyles/catcommanders.module.css
+++ b/src/app/components/styles/gamescrollerstyles/catcommanders.module.css
@@ -20,7 +20,7 @@
   }
 
   .embla__slide:hover .embla__slide__inner {
-    transform: scale(1.2);
+    transform: scale(1.12);
   }
 
   .embla__slide:hover {
