--- a/src/app/components/styles/gamescrollerstyles/samuraicat.module.css
+++ b/src/app/components/styles/gamescrollerstyles/samuraicat.module.css
@@ -57,7 +57,7 @@
     }
   
     .embla__slide:hover .embla__slide__inner {
-        transform: scale(1.1);
+        transform: scale(1.08);
       }
 
     .embla .embla__container .embla__slide:nth-child(4),
